# job_application_tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: admin.py  database.py  main.py
app/alembic/: env.py
app/alembic/versions/: 005b750c215a_create_users_jobapplication_.py  43fbb1522299_add_interview_and_jobtask_tables.py  579fe5d9a27d_add_documents_table.py  5c45ec469bd3_create_job_application_table.py  5e75857b4006_create_notificationtoken_table.py  5eeda7e2554b_altered_jobapplication_interview_table.py  5fe06ba67cd1_addition_of_blacklistedtoken_table.py  aad049baf839_modify_job_application_table.py  b51ea97e5f50_add_is_verified_column_to_users_table.py  ce5510f83881_create_contacts_table.py  d6467c8b13f9_add_emailverificationotp_table.py  d9406f1c5ef4_remove_unique_flag_from_email_on_.py  da21584f5e98_create_users_table.py  (+1 more)
app/api/: deps.py
app/core/: celery.py  config.py  logging_config.py  redis.py  security.py  util.py
app/crud/: crud_contacts.py  crud_documents.py  crud_interview.py  crud_job_application.py  crud_job_task.py  crud_notification.py  crud_user.py
app/models/: documents.py  job_application.py  notification.py  user.py
app/schemas/: contacts.py  documents.py  interview.py  job_application.py  job_task.py  notification.py  user.py
app/services/: document_service.py  firebase_service.py  otp_service.py  state_machine.py  storage_service.py
app/tasks/: document_tasks.py  email_tasks.py  job_tasks.py
templates/: base.html
templates/auth/: forgot_password.html
(+10 files in other folders)
